--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: text_plus
 description: "A text widget with easy use of text styles."
 version: 0.1.0
-homepage:
+repository: https://github.com/EmanoelV/text_plus
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
